[package]
name = "mastering_bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc-json = "0.15.0"
# primitive-types = "0.11.1"
rand = "0.8.5"
num-bigint = { version = "0.4.3", features = ["rand"] }
sha2 = "0.10.2"
ripemd = "0.1.1"
base58 = "0.2.0"


# Advanced Encryption Standard (AES)